src/components/zen-space/zen-space.scss
@import '../helpers/helpers.scss';

:host {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: baseline;
}

:host([stretch]) {
  width: 100%;
}

:host([vertical]) {
  flex-direction: column;
}

:host(:not([no-wrap])) {
  flex-wrap: wrap;
}

// Padding --------------------------------------

@include paddingSizes;

@include marginSizes;

// Row align ------------------------------------

$aligns: (
  'start': 'flex-start',
  'end': 'flex-end',
  'center': 'center',
  'baseline': 'baseline',
  'stretch': 'stretch',
  'space-between': 'space-between',
  'space-around': 'space-around',
  'space-evenly': 'space-evenly',
);

@each $key, $value in $aligns {
  :host(:not([vertical])[vertical-align='#{$key}']) {
    align-items: #{$value};
  }
}

@each $key, $value in $aligns {
  :host(:not([vertical])[horizontal-align='#{$key}']) {
    justify-content: #{$value};
  }
}

// Column align ---------------------------------

@each $key, $value in $aligns {
  :host([vertical-align='#{$key}']) {
    justify-content: #{$value};
  }
}

@each $key, $value in $aligns {
  :host([horizontal-align='#{$key}']) {
    align-items: #{$value};
  }
}

:host([vertical][vertical-align='stretch']) ::slotted(*),
:host(:not([vertical])[horizontal-align='stretch']) ::slotted(*) {
  flex-grow: 1;
}

// Spacing --------------------------------------

$spacings: (
  'none': 0,
  'xs': 1px,
  'sm': 0.25rem,
  'md': 0.5rem,
  'lg': 1rem,
  'xl': 2rem,
);

@each $key, $value in $spacings {
  :host([spacing='#{$key}']) ::slotted(*:not(:last-child)) {
    margin-right: #{$value};
  }
}

@each $key, $value in $spacings {
  :host([spacing='#{$key}'][vertical]) ::slotted(*:not(:last-child)) {
    margin-left: 0;
    margin-bottom: #{$value};
  }
}

// Slotted --------------------------------------

::slotted(.space-before),
::slotted([space-before]) {
  margin-left: auto !important;
}

::slotted(.space-after),
::slotted([space-after]) {
  margin-right: auto !important;
}

::slotted(.fill),
::slotted([fill]) {
  flex-grow: 1 !important;
}

::slotted(.fill-lg),
::slotted([fill-lg]) {
  flex-grow: 2 !important;
}

::slotted(.fill-xl),
::slotted([fill-xl]) {
  flex-grow: 4 !important;
}

// Form group --------------------------------------

::slotted([variant='label']) {
  margin-bottom: 0.75rem !important;
}

